# only-peers-client

./: .env  .env.development  .env.production  .env.sample  .gitignore  404.html  README.md  auth.html  feed.html  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: deplopy-nextjs.yml  deploy-nextjs.yml  deploy-react.yml  nextjs.yml
.github/workflows/setup-node/: action.yaml  action.yml
.husky/: pre-commit
_next/static/HPM3sPFBt9gQiUSRaIjL1/: _buildManifest.js
app/: .env.development  .env.example  .env.production  .env.sample  eslint.config.js  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
app-vite/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
app-vite/src/: App.tsx  index.css  main.tsx
app-vite/src/types/: types.ts
app/src/: App.tsx  index.css  main.tsx
auth/: metamask.html  near.html
logic/: Cargo.toml  build.sh
logic/res/: only_peers.wasm
logic/src/: lib.rs
post/: [id].html
src/api/: clientApi.ts  httpClient.ts  index.ts  login.ts  nodeApi.ts
src/components/: Content.tsx  Loading.tsx  header.tsx
src/constants/: en.global.json
src/contexts/: WalletSelectorContext.tsx
src/crypto/: crypto.ts  ed25519.ts
src/graphql/: mutations.ts  queries.ts
src/lib/: apollo.ts  peerId.ts  provider.tsx  storage.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/styles/: global.css
src/types/: types.ts
src/utils/: node.ts  nodeConfig.ts  storage.ts
(+97 files in other folders)
